line endings LF

--- a/notebooks/DatasetsExploration.ipynb
+++ b/notebooks/DatasetsExploration.ipynb
@@ -944,7 +944,7 @@
     {
      "data": {
       "text/plain": [
-       "'/Users/mdicio/Documents/GitHub/RealWTab/notebooks'"
+       "'./notebooks'"
       ]
      },
      "execution_count": 5,
@@ -1008,7 +1008,7 @@
     }
    ],
    "source": [
-    "df = pd.read_csv(\"/Users/mdicio/Documents/GitHub/RealWTab/data/covertype/covtype.data.gz\")\n",
+    "df = pd.read_csv(\"./data/covertype/covtype.data.gz\")\n",
     "len(df)"
    ]
   },
@@ -1031,7 +1031,7 @@
    ],
    "source": [
     "df = pd.read_csv(\n",
-    "            \"/Users/mdicio/Documents/GitHub/RealWTab/data/heloc/heloc_dataset_v1.csv\"\n",
+    "            \"./data/heloc/heloc_dataset_v1.csv\"\n",
     "        )\n",
     "len(df)"
    ]
