--- a/notebooks/GATE AgeConditions LoadFromStateDict.ipynb
+++ b/notebooks/GATE AgeConditions LoadFromStateDict.ipynb
@@ -63,10 +63,10 @@
    "outputs": [],
    "source": [
     "df = pd.read_csv(\n",
-    "    \"/Users/mdicio/Documents/GitHub/RealWTab/data/kaggle/icr-identify-age-related-conditions/train.csv\"\n",
+    "    \"./data/kaggle/icr-identify-age-related-conditions/train.csv\"\n",
     ").drop(columns=[\"Id\"])\n",
     "\n",
-    "df_test = pd.read_csv(\"/Users/mdicio/Documents/GitHub/RealWTab/data/kaggle/icr-identify-age-related-conditions/test.csv\")\n",
+    "df_test = pd.read_csv(\"./data/kaggle/icr-identify-age-related-conditions/test.csv\")\n",
     "\n",
     "\n",
     "# map the values to 0 and 1\n",
