--- a/notebooks/IGTD Tests.ipynb
+++ b/notebooks/IGTD Tests.ipynb
@@ -18,10 +18,10 @@
    "outputs": [],
    "source": [
     "CHUNK_SIZE = 100000\n",
-    "csv_file_list = [\"/Users/mdicio/Documents/GitHub/RealWTab/data/cofix/part-00191-4aeb6488-762c-44a6-9583-f3cb6132844d.c000.csv\", \n",
-    "                 \"/Users/mdicio/Documents/GitHub/RealWTab/data/cofix/part-00043-4aeb6488-762c-44a6-9583-f3cb6132844d.c000.csv\"]\n",
+    "csv_file_list = [\"./data/cofix/part-00191-4aeb6488-762c-44a6-9583-f3cb6132844d.c000.csv\", \n",
+    "                 \"./data/cofix/part-00043-4aeb6488-762c-44a6-9583-f3cb6132844d.c000.csv\"]\n",
     "\n",
-    "output_file = \"/Users/mdicio/Documents/GitHub/RealWTab/data/cofix/cofix.csv\"\n",
+    "output_file = \"./data/cofix/cofix.csv\"\n",
     "\n",
     "first_one = True\n",
     "for csv_file_name in csv_file_list:\n",
@@ -66,7 +66,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv(\"/Users/mdicio/Documents/GitHub/RealWTab/data/buf/sortedbulk_data-1.csv\")\n",
+    "df = pd.read_csv(\"./data/buf/sortedbulk_data-1.csv\")\n",
     "df_train = df.loc[df[\"partition_date\"] < \"2022-04-30\"]\n",
     "df_test = df.loc[df[\"partition_date\"] >= \"2022-04-30\"]"
    ]
@@ -98,7 +98,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "output_file = \"/Users/mdicio/Documents/GitHub/RealWTab/data/cofix/cofix.csv\"\n",
+    "output_file = \"./data/cofix/cofix.csv\"\n",
     "df = pd.read_csv(output_file)"
    ]
   },
@@ -130,10 +130,10 @@
    "outputs": [],
    "source": [
     "CHUNK_SIZE = 100000\n",
-    "csv_file_list = [\"/Users/mdicio/Documents/GitHub/RealWTab/data/comob/data/comob/part-00043-b23ec155-a219-454f-b929-49e92ddfdc11.c000.csv\", \n",
-    "                 \"/Users/mdicio/Documents/GitHub/RealWTab/data/comob/data/comob/part-00043-b23ec155-a219-454f-b929-49e92ddfdc11.c000.csv\"]\n",
+    "csv_file_list = [\"./data/comob/data/comob/part-00043-b23ec155-a219-454f-b929-49e92ddfdc11.c000.csv\", \n",
+    "                 \"./data/comob/data/comob/part-00043-b23ec155-a219-454f-b929-49e92ddfdc11.c000.csv\"]\n",
     "\n",
-    "output_file = \"/Users/mdicio/Documents/GitHub/RealWTab/data/comob/comob.csv\"\n",
+    "output_file = \"./data/comob/comob.csv\"\n",
     "\n",
     "first_one = True\n",
     "for csv_file_name in csv_file_list:\n",
@@ -156,7 +156,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data.to_csv(\"/Users/mdicio/Documents/GitHub/RealWTab/data/cofix/cofix.csv\")\n"
+    "data.to_csv(\"./data/cofix/cofix.csv\")\n"
    ]
   },
   {
@@ -166,9 +166,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = pd.read_csv(r'/Users/mdicio/Documents/GitHub/RealWTab/data/comob/part-00043-b23ec155-a219-454f-b929-49e92ddfdc11.c000.csv', low_memory=False, sep=',', engine='c',header=0)\n",
+    "data = pd.read_csv(r'./data/comob/part-00043-b23ec155-a219-454f-b929-49e92ddfdc11.c000.csv', low_memory=False, sep=',', engine='c',header=0)\n",
     "data.head()\n",
-    "data2 = pd.read_csv(r\"/Users/mdicio/Documents/GitHub/RealWTab/data/comob/part-00191-b23ec155-a219-454f-b929-49e92ddfdc11.c000.csv\",low_memory=False, sep=',', engine='c',header=0)\n",
+    "data2 = pd.read_csv(r\"./data/comob/part-00191-b23ec155-a219-454f-b929-49e92ddfdc11.c000.csv\",low_memory=False, sep=',', engine='c',header=0)\n",
     "data = pd.concat([data, data2], axis=0)"
    ]
   }
