--- a/notebooks/SimpleResNet.ipynb
+++ b/notebooks/SimpleResNet.ipynb
@@ -592,7 +592,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Directory '/Users/mdicio/Documents/GitHub/RealWTab/data/temp/' already exists.\n"
+      "Directory './data/temp/' already exists.\n"
      ]
     }
    ],
@@ -600,7 +600,7 @@
     "import os\n",
     "\n",
     "# specify the directory path\n",
-    "path = \"/Users/mdicio/Documents/GitHub/RealWTab/data/temp/\"\n",
+    "path = \"./data/temp/\"\n",
     "# check if the directory already exists\n",
     "if not os.path.exists(path):\n",
     "    # create the directory if it does not exist\n",
