--- a/notebooks/TabPFN.ipynb
+++ b/notebooks/TabPFN.ipynb
@@ -47,7 +47,7 @@
    "outputs": [],
    "source": [
     "df = pd.read_csv(\n",
-    "            \"/Users/mdicio/Documents/GitHub/RealWTab/data/kaggle/icr-identify-age-related-conditions/test.csv\"\n",
+    "            \"./data/kaggle/icr-identify-age-related-conditions/test.csv\"\n",
     "        )\n",
     "ids = df[\"Id\"]\n",
     "df = df.drop(columns=[\"Id\"])\n",
@@ -461,7 +461,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "subs.to_csv(\"/Users/mdicio/Documents/GitHub/RealWTab/output/ageconditions_submission.csv\", index = False)"
+    "subs.to_csv(\"./output/ageconditions_submission.csv\", index = False)"
    ]
   },
   {
