--- a/notebooks/Add run elements.ipynb
+++ b/notebooks/Add run elements.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 31,
    "id": "cbbf2036",
    "metadata": {},
    "outputs": [],
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 32,
    "id": "1eb95880",
    "metadata": {},
    "outputs": [],
@@ -70,7 +70,7 @@
     "            'learning_rate': [0.01, 0.001],\n",
     "            'hidden_size': [2048,4096],\n",
     "            'scheduler_factor': [0.1,0.9],\n",
-    "            'scheduler_patience': [5,10]\n",
+    "            'scheduler_patience': [3,5]\n",
     "        }\n",
     "\n",
     "s1dcnn_large_param_grid =  {\n",
@@ -85,7 +85,7 @@
     "            'learning_rate': [0.01, 0.001],\n",
     "            'hidden_size': [2048,4096],\n",
     "            'scheduler_factor': [0.1,0.9],\n",
-    "            'scheduler_patience': [5,10]\n",
+    "            'scheduler_patience': [3,5]\n",
     "        }"
    ]
   },
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 33,
    "id": "bcb7631f",
    "metadata": {},
    "outputs": [],
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 34,
    "id": "a41e39cf",
    "metadata": {},
    "outputs": [],
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 35,
    "id": "23ca859e",
    "metadata": {},
    "outputs": [],
@@ -242,8 +242,8 @@
     "                \"max_epochs\": 300,\n",
     "                \"val_size\": 0.2},\n",
     "    \n",
-    "\"early_stopping_patience\": [5,10],\n",
-    "\"batch_size\": [16,32,64,128,256],\n",
+    "\"early_stopping_patience\": [3,5],\n",
+    "\"batch_size\": [128,256,512,1024],\n",
     "\"tree_depth\": [4, 12],\n",
     "\"num_trees\": [6,16],\n",
     "\"chain_trees\": [True, False],\n",
@@ -251,7 +251,7 @@
     "\"optimizer_fn\": {\n",
     "        \"Adam\": {\"lr\": [0.001], \"weight_decay\": [0.0001]}\n",
     "    },\n",
-    "    \"scheduler_fn\": {\"ReduceLROnPlateau\": {\"factor\": [0.1, 0.9], \"patience\": [5,10]},\n",
+    "    \"scheduler_fn\": {\"ReduceLROnPlateau\": {\"factor\": [0.1, 0.9], \"patience\": [3,5]},\n",
     "    },\n",
     "    \n",
     "}"
@@ -267,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 36,
    "id": "922bf234",
    "metadata": {},
    "outputs": [],
@@ -280,9 +280,9 @@
     "        \"val_size\": 0.2,\n",
     "        \"auto_lr_find\": False\n",
     "    },\n",
-    "    \"early_stopping_patience\": [5,10],\n",
+    "    \"early_stopping_patience\": [3,5],\n",
     "    \"virtual_batch_size_ratio\": [0.125, 0.25,0.5],\n",
-    "    \"batch_size\": [16,32,64,128,256],\n",
+    "    \"batch_size\": [128,256,512,1024],\n",
     "    \"weights\": [0, 1],\n",
     "    \"mask_type\": [\"sparsemax\", \"entmax\"],\n",
     "    \"n_d\": [8, 16],\n",
@@ -297,7 +297,7 @@
     "    \"optimizer_fn\": {\n",
     "        \"Adam\": {\"lr\": [0.001], \"weight_decay\": [0.0001]}\n",
     "    },\n",
-    "    \"scheduler_fn\": {\"ReduceLROnPlateau\": {\"factor\": [0.1, 0.9], \"patience\": [5,10]},\n",
+    "    \"scheduler_fn\": {\"ReduceLROnPlateau\": {\"factor\": [0.1, 0.9], \"patience\": [3,5]},\n",
     "    },\n",
     "    \n",
     "}\n",
@@ -310,7 +310,7 @@
     "        \"val_size\": 0.2,\n",
     "        \"auto_lr_find\": False\n",
     "    },\n",
-    "    \"early_stopping_patience\": [5,10],\n",
+    "    \"early_stopping_patience\": [3,5],\n",
     "    \"virtual_batch_size_ratio\": [0.25,0.5],\n",
     "    \"batch_size\": [16,32,64],\n",
     "    \"weights\": [0, 1],\n",
@@ -327,7 +327,7 @@
     "    \"optimizer_fn\": {\n",
     "        \"Adam\": {\"lr\": [0.001], \"weight_decay\": [0.0001]}\n",
     "    },\n",
-    "    \"scheduler_fn\": {\"ReduceLROnPlateau\": {\"factor\": [0.1, 0.9], \"patience\": [5,10]},\n",
+    "    \"scheduler_fn\": {\"ReduceLROnPlateau\": {\"factor\": [0.1, 0.9], \"patience\": [3,5]},\n",
     "    },\n",
     "    \n",
     "}\n"
@@ -343,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 37,
    "id": "b415b8a0",
    "metadata": {},
    "outputs": [],
@@ -356,8 +356,8 @@
     "        \"val_size\": 0.2,\n",
     "        \"auto_lr_find\": False\n",
     "    },\n",
-    "    \"early_stopping_patience\": [5,10],\n",
-    "    \"batch_size\": [16,32,64,128,256],\n",
+    "    \"early_stopping_patience\": [3,5],\n",
+    "    \"batch_size\": [128,256,512,1024],\n",
     "    'input_embed_dim': [16, 32, 64],  # Three different values for embedding dimension\n",
     "    'embedding_initialization': ['kaiming_uniform', 'kaiming_normal'],\n",
     "    'embedding_bias': [True, False],  # Include or exclude embedding bias\n",
@@ -396,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 38,
    "id": "8779a8ff",
    "metadata": {},
    "outputs": [],
@@ -409,8 +409,8 @@
     "        \"val_size\": 0.2,\n",
     "        \"auto_lr_find\": False\n",
     "    },\n",
-    "    \"early_stopping_patience\": [5,10],\n",
-    "    \"batch_size\": [16,32,64,128,256],\n",
+    "    \"early_stopping_patience\": [3,5],\n",
+    "    \"batch_size\": [128,256,512,1024],\n",
     "    \n",
     "    \"optimizer_fn\": {\n",
     "        \"Adam\": {\"lr\": [0.001, 0.0001], \"weight_decay\": [0.0001,  0.3]}\n",
@@ -431,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 39,
    "id": "80542919",
    "metadata": {},
    "outputs": [],
@@ -444,8 +444,9 @@
     "        \"val_size\": 0.2,\n",
     "        \"auto_lr_find\": False\n",
     "    },\n",
-    "    \"early_stopping_patience\": [5,10],\n",
-    "    \"batch_size\": [16,32,64,128,256],\n",
+    "    \"early_stopping_patience\": [3,5],\n",
+    "    \"batch_size\": [128,256,512,1024],\n",
+    "    #\"batch_size\": [16,32,64,128,256],\n",
     "    \n",
     "    \"optimizer_fn\": {\n",
     "        \"Adam\": {\"lr\": [0.001, 0.0001], \"weight_decay\": [0.0001,  0.3]}\n",
@@ -466,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 40,
    "id": "4ec70022",
    "metadata": {},
    "outputs": [],
@@ -479,8 +480,8 @@
     "        \"val_size\": 0.2,\n",
     "        \"auto_lr_find\": False\n",
     "    },\n",
-    "    \"early_stopping_patience\": [5,10],\n",
-    "    \"batch_size\": [16,32,64,128,256],\n",
+    "    \"early_stopping_patience\": [3,5],\n",
+    "    \"batch_size\": [128,256,512,1024],\n",
     "    \"learning_rate\": [0.001,0.0001],\n",
     "    \"optimizer_fn\": {\n",
     "        \"Adam\": {\"lr\": [0.001, 0.0001], \"weight_decay\": [0.0001,  0.3]}\n",
@@ -490,6 +491,71 @@
     "    \n",
     "}"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "8ba9a0ab",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# AutoINT"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "f332524b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "autoint_large_param_grid = {\n",
+    "      \"outer_params\": {\n",
+    "        \"max_epochs\": 300,\n",
+    "        \"early_stopping_tolerance\": 1.0e-06,\n",
+    "        \"hyperopt_evals\": 10,\n",
+    "        \"val_size\": 0.2,\n",
+    "        \"auto_lr_find\": False\n",
+    "    },\n",
+    "    \"early_stopping_patience\": [3,5],\n",
+    "    \"batch_size\": [128,256,512,1024],\n",
+    "    \"optimizer_fn\": {\n",
+    "        \"Adam\": {\"lr\": [0.001, 0.0001], \"weight_decay\": [0.0001,  0.3]}\n",
+    "    },\n",
+    "    \"scheduler_fn\": {\"ReduceLROnPlateau\": {\"factor\": [0.1, 0.9], \"patience\": [4,9]},\n",
+    "    },\n",
+    "    'attn_embed_dim': [32, 16, 64],\n",
+    "    'num_heads': [2, 1, 8],\n",
+    "    'num_attn_blocks': [3, 1, 5],\n",
+    "    'attn_dropouts': [0.01, 0.3],\n",
+    "    'has_residuals': [True, True, False],\n",
+    "    'embedding_dim': [16, 8, 32],\n",
+    "    'embedding_initialization': ['kaiming_uniform', 'kaiming_normal'],\n",
+    "    'embedding_bias': [True, False],\n",
+    "    'share_embedding': [False, True],\n",
+    "    'share_embedding_strategy': ['fraction', 'add'],\n",
+    "    'shared_embedding_fraction': [0.25, 0.1, 0.5],\n",
+    "    'deep_layers': [False, True],\n",
+    "    'layers': ['128-64-32', '64-32', '256-128-64-32'],\n",
+    "    'activation': ['ReLU', 'Tanh', 'LeakyReLU'],\n",
+    "    'use_batch_norm': [False, True],\n",
+    "    'initialization': ['kaiming', 'xavier', 'random'],\n",
+    "    'dropout': [0.01, 0.2, 0.3],\n",
+    "    'attention_pooling': [False, True],\n",
+    "    'head': ['LinearHead', 'MixtureDensityHead'],\n",
+    "    'embedding_dropout': [0.1, 0.01, 0.5],\n",
+    "    'batch_norm_continuous_input': [True, False],\n",
+    "    'learning_rate': [0.001, 0.0001, 0.01],\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "37b682e7",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -502,7 +568,7 @@
     "            \"gamma\": [0.01, 0.99],\n",
     "        },\n",
     "        \"ExponentialLR\": {\"gamma\": [0.9, 0.99]},\n",
-    "        \"ReduceLROnPlateau\": {\"factor\": [0.1, 0.9], \"patience\": [5,10], \"min_lr\": [0.000001]},\n",
+    "        \"ReduceLROnPlateau\": {\"factor\": [0.1, 0.9], \"patience\": [3,5], \"min_lr\": [0.000001]},\n",
     "    },"
    ]
   },
@@ -516,7 +582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 43,
    "id": "d54e0e6f",
    "metadata": {},
    "outputs": [],
@@ -557,12 +623,12 @@
     "                            'validation_fraction': [0.1,0.3],\n",
     "                            'early_stopping_patience': [5, 25],\n",
     "                            'scheduler_factor': [0.1, 0.9],\n",
-    "                            'scheduler_patience': [5,10]}\n"
+    "                            'scheduler_patience': [3,5]}\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 44,
    "id": "b5faf7a7",
    "metadata": {},
    "outputs": [],
@@ -578,6 +644,39 @@
     "    generate_model_template(\"titanic\",\"fttransformer\", param_grid = fttransformer_large_param_grid.copy()),\n",
     "    generate_model_template(\"titanic\",\"gandalf\", param_grid = gandalf_large_param_grid.copy()),\n",
     "    generate_model_template(\"titanic\",\"node\", param_grid = node_large_param_grid.copy()),\n",
+    "\n",
+    "    generate_model_template(\"housing\",\"xgb\",param_grid = xgb_large_param_grid.copy()),\n",
+    "    generate_model_template(\"housing\", \"mlp\",  param_grid = mlp_large_param_grid.copy()),\n",
+    "    generate_model_template(\"housing\", \"resnet\", param_grid = resnet_large_param_grid.copy()),\n",
+    "    generate_model_template(\"housing\", \"s1dcnn\", param_grid = s1dcnn_large_param_grid.copy()),\n",
+    "    generate_model_template(\"housing\", \"tabnet\",param_grid = tabnet_large_param_grid.copy()),\n",
+    "    generate_model_template(\"housing\", \"gate\", param_grid = gate_large_param_grid.copy()),\n",
+    "    generate_model_template(\"housing\", \"categoryembedding\", param_grid = catembed_large_param_grid.copy()),\n",
+    "    generate_model_template(\"housing\",\"fttransformer\", param_grid = fttransformer_large_param_grid.copy()),\n",
+    "    generate_model_template(\"housing\",\"gandalf\", param_grid = gandalf_large_param_grid.copy()),\n",
+    "    generate_model_template(\"housing\",\"node\", param_grid = node_large_param_grid.copy()),\n",
+    "\n",
+    "    generate_model_template(\"adult\",\"xgb\",param_grid = xgb_large_param_grid.copy()),\n",
+    "    generate_model_template(\"adult\", \"mlp\",  param_grid = mlp_large_param_grid.copy()),\n",
+    "    generate_model_template(\"adult\", \"resnet\", param_grid = resnet_large_param_grid.copy()),\n",
+    "    generate_model_template(\"adult\", \"s1dcnn\", param_grid = s1dcnn_large_param_grid.copy()),\n",
+    "    generate_model_template(\"adult\", \"tabnet\",param_grid = tabnet_large_param_grid.copy()),\n",
+    "    generate_model_template(\"adult\", \"gate\", param_grid = gate_large_param_grid.copy()),\n",
+    "    generate_model_template(\"adult\", \"categoryembedding\", param_grid = catembed_large_param_grid.copy()),\n",
+    "    generate_model_template(\"adult\",\"fttransformer\", param_grid = fttransformer_large_param_grid.copy()),\n",
+    "    generate_model_template(\"adult\",\"gandalf\", param_grid = gandalf_large_param_grid.copy()),\n",
+    "    generate_model_template(\"adult\",\"node\", param_grid = node_large_param_grid.copy()),\n",
+    "\n",
+    "    generate_model_template(\"heloc\",\"xgb\",param_grid = xgb_large_param_grid.copy()),\n",
+    "    generate_model_template(\"heloc\", \"mlp\",  param_grid = mlp_large_param_grid.copy()),\n",
+    "    generate_model_template(\"heloc\", \"resnet\", param_grid = resnet_large_param_grid.copy()),\n",
+    "    generate_model_template(\"heloc\", \"s1dcnn\", param_grid = s1dcnn_large_param_grid.copy()),\n",
+    "    generate_model_template(\"heloc\", \"tabnet\",param_grid = tabnet_large_param_grid.copy()),\n",
+    "    generate_model_template(\"heloc\", \"gate\", param_grid = gate_large_param_grid.copy()),\n",
+    "    generate_model_template(\"heloc\", \"categoryembedding\", param_grid = catembed_large_param_grid.copy()),\n",
+    "    generate_model_template(\"heloc\",\"fttransformer\", param_grid = fttransformer_large_param_grid.copy()),\n",
+    "    generate_model_template(\"heloc\",\"gandalf\", param_grid = gandalf_large_param_grid.copy()),\n",
+    "    generate_model_template(\"heloc\",\"node\", param_grid = node_large_param_grid.copy()),\n",
     "            \n",
     "    generate_model_template(\"iris\",\"xgb\", param_grid = xgb_large_param_grid.copy()),\n",
     "    generate_model_template(\"iris\", \"mlp\",  param_grid = mlp_large_param_grid.copy()),\n",
@@ -589,6 +688,9 @@
     "    generate_model_template(\"iris\",\"fttransformer\", param_grid = fttransformer_large_param_grid.copy()),\n",
     "    generate_model_template(\"iris\",\"gandalf\", param_grid = gandalf_large_param_grid.copy()),\n",
     "    generate_model_template(\"iris\",\"node\", param_grid = node_large_param_grid.copy()),\n",
+    "    generate_model_template(\"iris\",\"autoint\", param_grid = autoint_large_param_grid.copy()),\n",
+    "    \n",
+    "    \n",
     "    \n",
     "    generate_model_template(\"breastcancer\",\"xgb\", param_grid = xgb_large_param_grid.copy()),\n",
     "    generate_model_template(\"breastcancer\",\"fttransformer\", param_grid = fttransformer_large_param_grid.copy()),\n",
@@ -604,7 +706,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 45,
    "id": "67431322",
    "metadata": {},
    "outputs": [],
