--- a/notebooks/Add run elements.ipynb
+++ b/notebooks/Add run elements.ipynb
@@ -85,7 +85,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "441e89b6",
+   "id": "cebdd2b3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -197,12 +197,12 @@
     "\"learning_rate\": [0.001, 0.0001],\n",
     "\"early_stopping_patience\": [3,5],\n",
     "\"batch_size\": [128,256,512,1024],\n",
-    "\"tree_depth\": [4, 12],\n",
-    "\"num_trees\": [6,16],\n",
-    "\"chain_trees\": [True, False],\n",
-    "\"gflu_stages\": [2, 4],\n",
+    "\"tree_depth\": [4, 7],\n",
+    "\"num_trees\": [8,22],\n",
+    "\"chain_trees\": [False],\n",
+    "\"gflu_stages\": [2, 8],\n",
     "\"optimizer_fn\": {\n",
-    "        \"Adam\": {\"weight_decay\": [0.000, 0.1]}\n",
+    "        \"Adam\": {\"weight_decay\": [0.0001, 0.1]}\n",
     "    },\n",
     "    \"scheduler_fn\": {\"ReduceLROnPlateau\": {\"factor\": [0.1, 0.9], \"patience\": [3,5]},\n",
     "    },\n",
@@ -217,11 +217,11 @@
     "\n",
     "\"learning_rate\": [0.001, 0.0001],\n",
     "\"early_stopping_patience\": [10,20],\n",
-    "\"batch_size\": [128,256,512,1024],\n",
-    "\"tree_depth\": [4, 12],\n",
-    "\"num_trees\": [4,20],\n",
-    "\"chain_trees\": [True, False],\n",
-    "\"gflu_stages\": [2, 4],\n",
+    "\"batch_size\": [16,32,64,128],\n",
+    "\"tree_depth\": [4,7],\n",
+    "\"num_trees\": [4,22],\n",
+    "\"chain_trees\": [False],\n",
+    "\"gflu_stages\": [2, 8],\n",
     "\"optimizer_fn\": {\n",
     "        \"Adam\": {\"weight_decay\": [0.0001,  0.1]}\n",
     "    },\n",
@@ -550,7 +550,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e8c67c4b",
+   "id": "7e73c428",
    "metadata": {},
    "source": [
     "# AutoINT"
@@ -648,8 +648,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "templates =[\n",
-    "    generate_model_template(\"titanic\",\"xgb\",param_grid = xgb_large_param_grid.copy()),\n",
+    "templates =[generate_model_template(\"titanic\",\"xgb\",param_grid = xgb_large_param_grid.copy()),\n",
     "    generate_model_template(\"titanic\", \"mlp\",  param_grid = mlp_large_param_grid.copy()),\n",
     "    generate_model_template(\"titanic\", \"resnet\", param_grid = resnet_large_param_grid.copy()),\n",
     "    generate_model_template(\"titanic\", \"s1dcnn\", param_grid = s1dcnn_large_param_grid.copy()),\n",
@@ -716,13 +715,13 @@
     "    generate_model_template(\"breastcancer\", \"gate\", param_grid = gate_large_param_grid.copy()),\n",
     "    generate_model_template(\"breastcancer\", \"categoryembedding\", param_grid = catembed_large_param_grid.copy()),\n",
     "    generate_model_template(\"breastcancer\",\"gandalf\", param_grid = gandalf_large_param_grid.copy()),\n",
-    "    generate_model_template(\"breastcancer\",\"node\", param_grid = node_large_param_grid.copy()),]"
+    "    generate_model_template(\"breastcancer\",\"node\", param_grid = node_large_param_grid.copy())]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "9801e460",
+   "id": "28b2910e",
    "metadata": {},
    "outputs": [],
    "source": [
