fix import for new logger format

--- a/notebooks/ExplorationBook.ipynb
+++ b/notebooks/ExplorationBook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
    "id": "abd838c3",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
    "id": "3f0405c2",
    "metadata": {},
    "outputs": [],
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 17,
    "id": "b9161df4",
    "metadata": {},
    "outputs": [],
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 18,
    "id": "9e4f9922",
    "metadata": {},
    "outputs": [
@@ -86,306 +86,24 @@
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>iris</td>\n",
-       "      <td>gate</td>\n",
-       "      <td>accuracy</td>\n",
-       "      <td>{'Adam_weight_decay': 0.000819260514618411, 'R...</td>\n",
-       "      <td>{'accuracy': 0.7368421052631579, 'f1': 0.69330...</td>\n",
-       "      <td>[2, 0, 2, 1, 2, 0, 0, 0, 0, 1]</td>\n",
-       "      <td>0.693305</td>\n",
-       "      <td>None</td>\n",
-       "      <td>0.736842</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>iris</td>\n",
-       "      <td>fttransformer</td>\n",
-       "      <td>accuracy</td>\n",
-       "      <td>{'Adam_weight_decay': 0.0005142760111028465, '...</td>\n",
-       "      <td>{'accuracy': 0.9473684210526315, 'f1': 0.94736...</td>\n",
-       "      <td>[2, 0, 2, 1, 2, 0, 0, 0, 0, 1]</td>\n",
-       "      <td>0.947368</td>\n",
-       "      <td>None</td>\n",
-       "      <td>0.947368</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>titanic</td>\n",
-       "      <td>tabnet</td>\n",
-       "      <td>accuracy</td>\n",
-       "      <td>{'Adam_lr': 0.001, 'Adam_weight_decay': 0.0001...</td>\n",
-       "      <td>{'recall': 0.5697674418604651, 'precision': 0....</td>\n",
-       "      <td>[0, 0, 0, 0, 0, 0, 0, 0, 0, 1]</td>\n",
-       "      <td>0.510417</td>\n",
-       "      <td>None</td>\n",
-       "      <td>0.578475</td>\n",
-       "      <td>0.569767</td>\n",
-       "      <td>0.462264</td>\n",
-       "      <td>0.604651</td>\n",
-       "      <td>0.429302</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>titanic</td>\n",
-       "      <td>tabnet</td>\n",
-       "      <td>accuracy</td>\n",
-       "      <td>{'Adam_weight_decay': 0.0008344870704054452, '...</td>\n",
-       "      <td>{'recall': 0.7441860465116279, 'precision': 0....</td>\n",
-       "      <td>[0, 0, 0, 0, 0, 0, 0, 0, 0, 1]</td>\n",
-       "      <td>0.711111</td>\n",
-       "      <td>None</td>\n",
-       "      <td>0.766816</td>\n",
-       "      <td>0.744186</td>\n",
-       "      <td>0.680851</td>\n",
-       "      <td>0.784417</td>\n",
-       "      <td>0.605335</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>titanic</td>\n",
-       "      <td>mlp</td>\n",
-       "      <td>accuracy</td>\n",
-       "      <td>{'validation_fraction': 0.2, 'solver': 'adam',...</td>\n",
-       "      <td>{'recall': 0.686046511627907, 'precision': 0.7...</td>\n",
-       "      <td>[0, 0, 0, 0, 0, 0, 0, 0, 0, 1]</td>\n",
-       "      <td>0.710843</td>\n",
-       "      <td>None</td>\n",
-       "      <td>0.784753</td>\n",
-       "      <td>0.686047</td>\n",
-       "      <td>0.737500</td>\n",
-       "      <td>0.836530</td>\n",
-       "      <td>0.627036</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>titanic</td>\n",
-       "      <td>gate</td>\n",
-       "      <td>accuracy</td>\n",
-       "      <td>{'Adam_weight_decay': 0.0006541882727374067, '...</td>\n",
-       "      <td>{'recall': 0.7790697674418605, 'precision': 0....</td>\n",
-       "      <td>[0, 0, 0, 0, 0, 0, 0, 0, 0, 1]</td>\n",
-       "      <td>0.736264</td>\n",
-       "      <td>None</td>\n",
-       "      <td>0.784753</td>\n",
-       "      <td>0.779070</td>\n",
-       "      <td>0.697917</td>\n",
-       "      <td>0.849262</td>\n",
-       "      <td>0.628928</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>titanic</td>\n",
-       "      <td>fttransformer</td>\n",
-       "      <td>accuracy</td>\n",
-       "      <td>{'Adam_weight_decay': 0.1291766256800087, 'Red...</td>\n",
-       "      <td>{'recall': 0.8023255813953488, 'precision': 0....</td>\n",
-       "      <td>[0, 0, 0, 0, 0, 0, 0, 0, 0, 1]</td>\n",
-       "      <td>0.754098</td>\n",
-       "      <td>None</td>\n",
-       "      <td>0.798206</td>\n",
-       "      <td>0.802326</td>\n",
-       "      <td>0.711340</td>\n",
-       "      <td>0.837294</td>\n",
-       "      <td>0.646960</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>titanic</td>\n",
-       "      <td>s1dcnn</td>\n",
-       "      <td>accuracy</td>\n",
-       "      <td>{'batch_size': 1538, 'early_stopping_patience'...</td>\n",
-       "      <td>{'recall': 0.6046511627906976, 'precision': 0....</td>\n",
-       "      <td>[0, 0, 0, 0, 0, 0, 0, 0, 0, 1]</td>\n",
-       "      <td>0.707483</td>\n",
-       "      <td>None</td>\n",
-       "      <td>0.807175</td>\n",
-       "      <td>0.604651</td>\n",
-       "      <td>0.852459</td>\n",
-       "      <td>0.756705</td>\n",
-       "      <td>0.667907</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>titanic</td>\n",
-       "      <td>s1dcnn</td>\n",
-       "      <td>accuracy</td>\n",
-       "      <td>{'batch_size': 112, 'early_stopping_patience':...</td>\n",
-       "      <td>{'recall': 0.6744186046511628, 'precision': 0....</td>\n",
-       "      <td>[0, 0, 0, 0, 0, 0, 0, 0, 0, 1]</td>\n",
-       "      <td>0.729560</td>\n",
-       "      <td>None</td>\n",
-       "      <td>0.807175</td>\n",
-       "      <td>0.674419</td>\n",
-       "      <td>0.794521</td>\n",
-       "      <td>0.840265</td>\n",
-       "      <td>0.661400</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>titanic</td>\n",
-       "      <td>mlp</td>\n",
-       "      <td>accuracy</td>\n",
-       "      <td>{'validation_fraction': 0.2, 'solver': 'adam',...</td>\n",
-       "      <td>{'recall': 0.6511627906976745, 'precision': 0....</td>\n",
-       "      <td>[0, 0, 0, 0, 0, 0, 0, 0, 0, 1]</td>\n",
-       "      <td>0.727273</td>\n",
-       "      <td>None</td>\n",
-       "      <td>0.811659</td>\n",
-       "      <td>0.651163</td>\n",
-       "      <td>0.823529</td>\n",
-       "      <td>0.826600</td>\n",
-       "      <td>0.670781</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>titanic</td>\n",
-       "      <td>xgb</td>\n",
-       "      <td>accuracy</td>\n",
-       "      <td>{'alpha': 1.2287812618695404, 'colsample_bytre...</td>\n",
-       "      <td>{'recall': 0.6976744186046512, 'precision': 0....</td>\n",
-       "      <td>[0, 0, 0, 0, 0, 0, 0, 0, 0, 1]</td>\n",
-       "      <td>0.759494</td>\n",
-       "      <td>None</td>\n",
-       "      <td>0.829596</td>\n",
-       "      <td>0.697674</td>\n",
-       "      <td>0.833333</td>\n",
-       "      <td>0.867552</td>\n",
-       "      <td>0.697987</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>titanic</td>\n",
-       "      <td>xgb</td>\n",
-       "      <td>accuracy</td>\n",
-       "      <td>{'alpha': 2.6726856899356086, 'colsample_bytre...</td>\n",
-       "      <td>{'recall': 0.6976744186046512, 'precision': 0....</td>\n",
-       "      <td>[0, 0, 0, 0, 0, 0, 0, 0, 0, 1]</td>\n",
-       "      <td>0.759494</td>\n",
-       "      <td>None</td>\n",
-       "      <td>0.829596</td>\n",
-       "      <td>0.697674</td>\n",
-       "      <td>0.833333</td>\n",
-       "      <td>0.870438</td>\n",
-       "      <td>0.697987</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "    dataset          model eval_metric  \\\n",
-       "10     iris           gate    accuracy   \n",
-       "11     iris  fttransformer    accuracy   \n",
-       "3   titanic         tabnet    accuracy   \n",
-       "7   titanic         tabnet    accuracy   \n",
-       "5   titanic            mlp    accuracy   \n",
-       "8   titanic           gate    accuracy   \n",
-       "9   titanic  fttransformer    accuracy   \n",
-       "2   titanic         s1dcnn    accuracy   \n",
-       "6   titanic         s1dcnn    accuracy   \n",
-       "1   titanic            mlp    accuracy   \n",
-       "0   titanic            xgb    accuracy   \n",
-       "4   titanic            xgb    accuracy   \n",
-       "\n",
-       "                                          best_params  \\\n",
-       "10  {'Adam_weight_decay': 0.000819260514618411, 'R...   \n",
-       "11  {'Adam_weight_decay': 0.0005142760111028465, '...   \n",
-       "3   {'Adam_lr': 0.001, 'Adam_weight_decay': 0.0001...   \n",
-       "7   {'Adam_weight_decay': 0.0008344870704054452, '...   \n",
-       "5   {'validation_fraction': 0.2, 'solver': 'adam',...   \n",
-       "8   {'Adam_weight_decay': 0.0006541882727374067, '...   \n",
-       "9   {'Adam_weight_decay': 0.1291766256800087, 'Red...   \n",
-       "2   {'batch_size': 1538, 'early_stopping_patience'...   \n",
-       "6   {'batch_size': 112, 'early_stopping_patience':...   \n",
-       "1   {'validation_fraction': 0.2, 'solver': 'adam',...   \n",
-       "0   {'alpha': 1.2287812618695404, 'colsample_bytre...   \n",
-       "4   {'alpha': 2.6726856899356086, 'colsample_bytre...   \n",
-       "\n",
-       "                                       output_metrics  \\\n",
-       "10  {'accuracy': 0.7368421052631579, 'f1': 0.69330...   \n",
-       "11  {'accuracy': 0.9473684210526315, 'f1': 0.94736...   \n",
-       "3   {'recall': 0.5697674418604651, 'precision': 0....   \n",
-       "7   {'recall': 0.7441860465116279, 'precision': 0....   \n",
-       "5   {'recall': 0.686046511627907, 'precision': 0.7...   \n",
-       "8   {'recall': 0.7790697674418605, 'precision': 0....   \n",
-       "9   {'recall': 0.8023255813953488, 'precision': 0....   \n",
-       "2   {'recall': 0.6046511627906976, 'precision': 0....   \n",
-       "6   {'recall': 0.6744186046511628, 'precision': 0....   \n",
-       "1   {'recall': 0.6511627906976745, 'precision': 0....   \n",
-       "0   {'recall': 0.6976744186046512, 'precision': 0....   \n",
-       "4   {'recall': 0.6976744186046512, 'precision': 0....   \n",
-       "\n",
-       "                       debug_ytrue        f1   mse  accuracy    recall  \\\n",
-       "10  [2, 0, 2, 1, 2, 0, 0, 0, 0, 1]  0.693305  None  0.736842       NaN   \n",
-       "11  [2, 0, 2, 1, 2, 0, 0, 0, 0, 1]  0.947368  None  0.947368       NaN   \n",
-       "3   [0, 0, 0, 0, 0, 0, 0, 0, 0, 1]  0.510417  None  0.578475  0.569767   \n",
-       "7   [0, 0, 0, 0, 0, 0, 0, 0, 0, 1]  0.711111  None  0.766816  0.744186   \n",
-       "5   [0, 0, 0, 0, 0, 0, 0, 0, 0, 1]  0.710843  None  0.784753  0.686047   \n",
-       "8   [0, 0, 0, 0, 0, 0, 0, 0, 0, 1]  0.736264  None  0.784753  0.779070   \n",
-       "9   [0, 0, 0, 0, 0, 0, 0, 0, 0, 1]  0.754098  None  0.798206  0.802326   \n",
-       "2   [0, 0, 0, 0, 0, 0, 0, 0, 0, 1]  0.707483  None  0.807175  0.604651   \n",
-       "6   [0, 0, 0, 0, 0, 0, 0, 0, 0, 1]  0.729560  None  0.807175  0.674419   \n",
-       "1   [0, 0, 0, 0, 0, 0, 0, 0, 0, 1]  0.727273  None  0.811659  0.651163   \n",
-       "0   [0, 0, 0, 0, 0, 0, 0, 0, 0, 1]  0.759494  None  0.829596  0.697674   \n",
-       "4   [0, 0, 0, 0, 0, 0, 0, 0, 0, 1]  0.759494  None  0.829596  0.697674   \n",
-       "\n",
-       "    precision       auc  area_under_pr r2_score  rmse  \n",
-       "10        NaN       NaN            NaN     None  None  \n",
-       "11        NaN       NaN            NaN     None  None  \n",
-       "3    0.462264  0.604651       0.429302     None  None  \n",
-       "7    0.680851  0.784417       0.605335     None  None  \n",
-       "5    0.737500  0.836530       0.627036     None  None  \n",
-       "8    0.697917  0.849262       0.628928     None  None  \n",
-       "9    0.711340  0.837294       0.646960     None  None  \n",
-       "2    0.852459  0.756705       0.667907     None  None  \n",
-       "6    0.794521  0.840265       0.661400     None  None  \n",
-       "1    0.823529  0.826600       0.670781     None  None  \n",
-       "0    0.833333  0.867552       0.697987     None  None  \n",
-       "4    0.833333  0.870438       0.697987     None  None  "
+       "Empty DataFrame\n",
+       "Columns: [dataset, model, eval_metric, best_params, output_metrics, debug_ytrue, f1, mse, accuracy, recall, precision, auc, area_under_pr, r2_score, rmse]\n",
+       "Index: []"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Specify the metric you want to maximize\n",
-    "metric_to_maximize = 'accuracy'\n",
+    "metric_to_maximize = 'mse'\n",
     "tomax = {\"f1\": True,\n",
     "         \"mse\": False,\n",
     "         \"accuracy\": True,\n",
