--- a/notebooks/Add run elements.ipynb
+++ b/notebooks/Add run elements.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 16,
    "id": "cbbf2036",
    "metadata": {},
    "outputs": [],
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 17,
    "id": "1eb95880",
    "metadata": {},
    "outputs": [],
@@ -60,13 +60,13 @@
     "\n",
     "s1dcnn_large_param_grid =  {\n",
     "        'outer_params': {\n",
-    "            \"hyperopt_evals\":32,\n",
-    "            'num_epochs': 100,\n",
+    "            \"hyperopt_evals\":10,\n",
+    "            'num_epochs': 1000,\n",
     "            'early_stopping': True,\n",
     "            'shuffle': True,},\n",
     "            'batch_size': [256,512,1024,2048],\n",
     "            'validation_fraction': [0.1, 0.3],\n",
-    "            'early_stopping_patience': [5, 10],\n",
+    "            'early_stopping_patience': [3, 5],\n",
     "            'learning_rate': [0.01, 0.0001],\n",
     "            'hidden_size': [1024,2048,4096],\n",
     "            'scheduler_factor': [0.1,0.9],\n",
@@ -84,8 +84,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "cebdd2b3",
+   "execution_count": 18,
+   "id": "7a8fe317",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +107,7 @@
     "        }\n",
     "\n",
     "mlp_large_param_grid = {\n",
-    "            \"outer_params\": {\"cv_iterations\": 32,\n",
+    "            \"outer_params\": {\"cv_iterations\": 10,\n",
     "                            \"early_stopping\": True,\n",
     "                            \"cv_size\": 5},\n",
     "            \"hidden_layer_sizes\": [[16,32], [16,8], [32,16], [45,20]],\n",
@@ -117,10 +117,10 @@
     "            \"learning_rate_init\": [0.001, 0.01, 0.1],\n",
     "            \"beta_1\":[0.9,0.99,0.8],\n",
     "            \"beta_2\":[0.999,0.9],\n",
-    "            \"n_iter_no_change\": [5,10],\n",
+    "            \"n_iter_no_change\": [3,5],\n",
     "            \"validation_fraction\": [0.1,0.15,0.2],\n",
     "            \"max_iter\": [1000,2000],\n",
-    "            \"batch_size\": [128,256,512,1024,2048],\n",
+    "            \"batch_size\": [256,512,1024,2048],\n",
     "        }"
    ]
   },
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 19,
    "id": "a41e39cf",
    "metadata": {},
    "outputs": [],
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 20,
    "id": "23ca859e",
    "metadata": {},
    "outputs": [],
@@ -191,12 +191,12 @@
     "gate_large_param_grid = {\n",
     "\"outer_params\": {\"hyperopt_evals\": 10,\n",
     "                'auto_lr_find': False,\n",
-    "                \"max_epochs\": 300,\n",
+    "                \"max_epochs\": 1000,\n",
     "                \"val_size\": 0.2},\n",
     "\n",
     "\"learning_rate\": [0.001, 0.0001],\n",
     "\"early_stopping_patience\": [3,5],\n",
-    "\"batch_size\": [128,256,512,1024],\n",
+    "\"batch_size\": [256,512,1024],\n",
     "\"tree_depth\": [4, 7],\n",
     "\"num_trees\": [8,22],\n",
     "\"chain_trees\": [False],\n",
@@ -241,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 21,
    "id": "922bf234",
    "metadata": {},
    "outputs": [],
@@ -255,9 +255,9 @@
     "        \"auto_lr_find\": False\n",
     "    },\n",
     "    \"learning_rate\": [0.001, 0.0001],\n",
-    "    \"early_stopping_patience\": [5,10],\n",
+    "    \"early_stopping_patience\": [3,5],\n",
     "    \"virtual_batch_size_ratio\": [0.125, 0.25,0.5],\n",
-    "    \"batch_size\": [128,256,512,1024],\n",
+    "    \"batch_size\": [256,512,1024],\n",
     "    \"weights\": [0, 1],\n",
     "    \"mask_type\": [\"sparsemax\", \"entmax\"],\n",
     "    \"n_d\": [8, 16],\n",
@@ -319,22 +319,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 22,
    "id": "b415b8a0",
    "metadata": {},
    "outputs": [],
    "source": [
     "fttransformer_large_param_grid = {\n",
     "    \"outer_params\": {\n",
-    "        \"max_epochs\": 300,\n",
+    "        \"max_epochs\": 1000,\n",
     "        \"early_stopping_tolerance\": 1.0e-06,\n",
     "        \"hyperopt_evals\": 10,\n",
     "        \"val_size\": 0.2,\n",
     "        \"auto_lr_find\": False\n",
     "    },\n",
     "    \"learning_rate\": [0.001, 0.0001],\n",
-    "    \"early_stopping_patience\": [5,10],\n",
-    "    \"batch_size\": [128,256,512,1024,2048],\n",
+    "    \"early_stopping_patience\": [3,5],\n",
+    "    \"batch_size\": [256,512,1024,2048],\n",
     "    'input_embed_dim': [16, 32, 64],  # Three different values for embedding dimension\n",
     "    'embedding_initialization': ['kaiming_uniform', 'kaiming_normal'],\n",
     "    'embedding_bias': [True, False],  # Include or exclude embedding bias\n",
@@ -411,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 23,
    "id": "8779a8ff",
    "metadata": {},
    "outputs": [],
@@ -467,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 24,
    "id": "80542919",
    "metadata": {},
    "outputs": [],
@@ -523,7 +523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 25,
    "id": "4ec70022",
    "metadata": {},
    "outputs": [],
@@ -550,7 +550,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7e73c428",
+   "id": "0deb39eb",
    "metadata": {},
    "source": [
     "# AutoINT"
@@ -558,7 +558,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 26,
    "id": "f332524b",
    "metadata": {},
    "outputs": [],
@@ -613,7 +613,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 27,
    "id": "d54e0e6f",
    "metadata": {},
    "outputs": [],
@@ -630,20 +630,20 @@
     "                            'scheduler_patience': [10, 15, 20]}\n",
     "\n",
     "# Set the desired parameters\n",
-    "resnet_large_param_grid = {'outer_params':{'hyperopt_evals': 64,\n",
+    "resnet_large_param_grid = {'outer_params':{'hyperopt_evals': 10,\n",
     "                            'num_epochs': 1000,\n",
     "                            'early_stopping': True},\n",
     "                            'learning_rate': [0.0001, 0.001],\n",
-    "                            'batch_size': [256,512,1024],\n",
+    "                            'batch_size': [256,512,1024,2048],\n",
     "                            'validation_fraction': [0.1,0.3],\n",
-    "                            'early_stopping_patience': [5, 7],\n",
+    "                            'early_stopping_patience': [3, 5],\n",
     "                            'scheduler_factor': [0.1, 0.9],\n",
     "                            'scheduler_patience': [3,5]}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 28,
    "id": "b5faf7a7",
    "metadata": {},
    "outputs": [],
@@ -720,8 +720,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "28b2910e",
+   "execution_count": 29,
+   "id": "99ee4453",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -741,27 +741,27 @@
     "    generate_model_template(\"iris\", \"gate\", param_grid = gate_small_param_grid.copy()),\n",
     "    generate_model_template(\"iris\",\"fttransformer\", param_grid = fttransformer_small_param_grid.copy()),\n",
     "\n",
-    "    generate_model_template(\"housing\",\"xgb\",param_grid = xgb_small_param_grid.copy()),\n",
-    "    generate_model_template(\"housing\", \"mlp\",  param_grid = mlp_small_param_grid.copy()),\n",
-    "    generate_model_template(\"housing\", \"resnet\", param_grid = resnet_small_param_grid.copy()),\n",
-    "    generate_model_template(\"housing\", \"s1dcnn\", param_grid = s1dcnn_small_param_grid.copy()),\n",
-    "    generate_model_template(\"housing\", \"tabnet\",param_grid = tabnet_small_param_grid.copy()),\n",
-    "    generate_model_template(\"housing\", \"gate\", param_grid = gate_small_param_grid.copy()),\n",
-    "    generate_model_template(\"housing\",\"fttransformer\", param_grid = fttransformer_small_param_grid.copy()),\n",
+    "    generate_model_template(\"housing\",\"xgb\",param_grid = xgb_large_param_grid.copy()),\n",
+    "    generate_model_template(\"housing\", \"mlp\",  param_grid = mlp_large_param_grid.copy()),\n",
+    "    generate_model_template(\"housing\", \"resnet\", param_grid = resnet_large_param_grid.copy()),\n",
+    "    generate_model_template(\"housing\", \"s1dcnn\", param_grid = s1dcnn_large_param_grid.copy()),\n",
+    "    generate_model_template(\"housing\", \"tabnet\",param_grid = tabnet_large_param_grid.copy()),\n",
+    "    generate_model_template(\"housing\", \"gate\", param_grid = gate_large_param_grid.copy()),\n",
+    "    generate_model_template(\"housing\",\"fttransformer\", param_grid = fttransformer_large_param_grid.copy()),\n",
     "\n",
-    "    generate_model_template(\"adult\",\"xgb\",param_grid = xgb_small_param_grid.copy()),\n",
-    "    generate_model_template(\"adult\", \"mlp\",  param_grid = mlp_small_param_grid.copy()),\n",
-    "    generate_model_template(\"adult\", \"resnet\", param_grid = resnet_small_param_grid.copy()),\n",
-    "    generate_model_template(\"adult\", \"s1dcnn\", param_grid = s1dcnn_small_param_grid.copy()),\n",
-    "    generate_model_template(\"adult\", \"tabnet\",param_grid = tabnet_small_param_grid.copy()),\n",
-    "    generate_model_template(\"adult\", \"gate\", param_grid = gate_small_param_grid.copy()),\n",
-    "    generate_model_template(\"adult\",\"fttransformer\", param_grid = fttransformer_small_param_grid.copy()),\n",
+    "    generate_model_template(\"adult\",\"xgb\",param_grid = xgb_large_param_grid.copy()),\n",
+    "    generate_model_template(\"adult\", \"mlp\",  param_grid = mlp_large_param_grid.copy()),\n",
+    "    generate_model_template(\"adult\", \"resnet\", param_grid = resnet_large_param_grid.copy()),\n",
+    "    generate_model_template(\"adult\", \"s1dcnn\", param_grid = s1dcnn_large_param_grid.copy()),\n",
+    "    generate_model_template(\"adult\", \"tabnet\",param_grid = tabnet_large_param_grid.copy()),\n",
+    "    generate_model_template(\"adult\", \"gate\", param_grid = gate_large_param_grid.copy()),\n",
+    "    generate_model_template(\"adult\",\"fttransformer\", param_grid = fttransformer_large_param_grid.copy()),\n",
     "]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 30,
    "id": "67431322",
    "metadata": {},
    "outputs": [],
